fixed cross-browsers and wrap

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -919,15 +919,20 @@ input::-webkit-input-placeholder {
 .droppable.nav {
   background-color: rgba(62, 187, 187, 0.95);
   display: none;
+  bottom: 0px;
+  left: 0px;
   position: fixed;
+  right: 0px;
+  top: 0px;
   z-index: 99;
   height: 100%;
-  width: 100%;
-  padding: 100px 0px 170px;
+  width: auto;
+  padding: 100px 0px 0px;
   color: #ffffff;
   text-align: center;
   overflow-y: scroll;
   -webkit-overflow-scrolling: touch;
+  -ms-overflow-style: none;
 }
 
 .droppable.nav .content-divider {
@@ -942,6 +947,7 @@ input::-webkit-input-placeholder {
   width: 90%;
   margin-left: auto;
   margin-right: auto;
+  padding-bottom: 170px;
 }
 
 @media screen and (min-width: 600px) {
