--- a/src/less/inc/ae-navbar.less
+++ b/src/less/inc/ae-navbar.less
@@ -314,20 +314,25 @@
         background-color: fade(@default-accent, 95%);
         display: none;
 
+        bottom: 0px;
+        left:0px;
         position: fixed;
+        right: 0px;
+        top:0px;
         z-index: 99;
 
-        height: 100%;
-        width: 100%;
 
-        // padding: 100px 100px 170px;
-        padding: 100px 0px 170px;
+        height: 100%;
+        width: auto;
+
+        padding: 100px 0px 0px;
 
         color: @default-background;
         text-align: center;
 
         overflow-y: scroll;
         -webkit-overflow-scrolling: touch;
+        -ms-overflow-style: none;
 
         .content-divider {
             border-color: lighten(@default-accent, 20%);
@@ -338,9 +343,9 @@
 
         .pagination {
             width: 90%;
-
             margin-left: auto;
             margin-right: auto;
+            padding-bottom: 170px;
             //*-----[Responsive 600++]-----*/
             @media screen and (min-width: 600px) {
                 width: 60%;
